log
Sun, May 18, 2025  4:12:04 PM: 
 sudoku.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Sun, May 18, 2025  4:14:41 PM: 
 tests:  2|4
total_score: 15/70
c56649b
Sun, May 18, 2025  5:08:13 PM: 
 sudoku.c | 72 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 71 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
9004d0f
Sun, May 18, 2025  5:18:05 PM: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  6|2
total_score: 45/70
4263709
